# Tracko

./: .env.example  .gitattributes  .gitignore  .gitmodules  .tracko-cli.json  CLAUDE.md  Dockerfile  EM  README-STARTUP.md  README.md  Taskfile.yml  UPGRADE_RECOMMENDATIONS.md  create_user.sh  docker-compose.yml  entrypoint.sh  justfile  main.py  nginx.conf  openapi.json  run-integration-tests.sh  start-tracko.sh  trako.spec  upgrade-test-lxc.sh
Tracko-Flutter-UI/: .flutter-plugins-dependencies  README.md  analysis_options.yaml  fix-imports.ps1  local.properties  pubspec.yaml
Tracko-Java-Backend/: .gitignore  Dockerfile  ExpenseManager.postman_collection.json  ExpenseManager_mysql_create.sql  Jenkinsfile  README.md  docker-compose.yml  pom.xml  tracko-dev-db.lock.db  tracko-dev-db.mv.db  tracko-dev-db.trace.db
Tracko-Python-Backend/: hosting-details.env  requirements.txt
cli/: .coverage  README.md  README_SEEDING.md  __main__.py  entry.py  main.py  pyproject.toml  requirements.txt  run_cli_test.py  seed_database.py
cli/commands/: account.py  accounts.py  auth.py  budget.py  categories.py  category.py  completion.py  config.py  contact.py  contacts.py  currencies.py  currency.py  db.py  health.py  misc.py  split.py  splits.py  stats.py  transaction.py  transactions.py  user.py  users.py
cli/core/: api.py  client.py  config.py  http.py  models.py  output.py
cli/tests/: conftest.py  test_account.py  test_config.py  test_health.py  test_output.py  test_parser.py  test_prompts.py  test_transaction.py
cli/utils/: dates.py  formatting.py  lookups.py  prompts.py
(+1209 files in other folders)
